# pwrforge

./: .gitignore  .gitlab-ci.yml  .gitmodules  CODE-OF-CONDUCT.md  README.md  build.py  build_release.py  docker-compose.yaml  pyproject.toml  run.py  setup.cfg
.github/workflows/: README.md  doc_release_only.yml  pr.yml  release.yml  workflow-common.yml
ci/: Dockerfile  requirements.txt  setup.sh
common_dev/scripts/: cyclomatic.py  documentation.py  test_report.py
docs/: pwrforge_flows.md
docs/source/: README.md  about.rst  conf.py  contributing.rst  index.rst  installation.rst  versions.rst
example_project/: .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  pwrforge.toml
example_project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
example_project/tests/: conanfile.py
pwrforge/: __init__.py  cli.py  config.py  config_utils.py  global_values.py  logger.py
pwrforge/commands/: build.py  check.py  docker.py  flash.py  gen.py  license_check.py  monitor.py  new.py  run.py  test.py  update.py  version.py
pwrforge/file_generators/: base_gen.py  cicd_gen.py  docker_gen.py  env_gen.py  readme_gen.py  tests_gen.py  ut_gen.py  vscode_gen.py
pwrforge/target_helpers/: stm32_helper.py
pwrforge/templates/: .clang-tidy  env.sh  setup.sh
pwrforge/utils/: conan_utils.py  docker_utils.py  path_utils.py  sys_utils.py
tests/it/: conftest.py  it_pwrforge_command_test.py  it_pwrforge_commands_flow.py  utils.py
tests/test_data/test_projects/common_pwrforge_project/src/: CMakeLists.txt
tests/ut/: conftest.py  ut_conan_utils.py  utils.py  (+12 more)
(+131 files in other folders)
